--- a/index.css
+++ b/index.css
@@ -5,24 +5,28 @@
   
   #light,
   :root:has(#light:checked) {
-    --bg-color:white;
+   
     --text-color: #121214;
+    background-image: linear-gradient(90deg, transparent 0%, transparent 10%, #DB676C 10%, #DB676C calc(10% + 2px), transparent calc(10% + 2px), transparent 100%), linear-gradient(180deg, white 12%, transparent 12%), repeating-linear-gradient(180deg, #D7D7D9 0px, #D7D7D9 1px, transparent 1px, transparent 30px), linear-gradient(white,white);
   }
   #dark,
   :root:has(#dark:checked) {
-    --bg-color:#121214;
+    background-image: repeating-radial-gradient(circle at center center, transparent 0px, transparent 11px,rgba(255,255,255,0.04) 11px, rgba(255,255,255,0.04) 19px,transparent 19px, transparent 29px,rgba(255,255,255,0.04) 29px, rgba(255,255,255,0.04) 33px),repeating-radial-gradient(circle at center center, rgb(0,0,0) 0px, rgb(0,0,0) 5px,rgb(0,0,0) 5px, rgb(0,0,0) 17px,rgb(0,0,0) 17px, rgb(0,0,0) 30px,rgb(0,0,0) 30px, rgb(0,0,0) 43px,rgb(0,0,0) 43px, rgb(0,0,0) 45px,rgb(0,0,0) 45px, rgb(0,0,0) 47px); background-size: 53px 53px;
     --text-color: white;
   }
   
   #blue,
   :root:has(#blue:checked) {
-    --bg-color:aqua;
-    --text-color: 121214;
+    font-weight: bold;
+    
+    --text-color: white;
+    background-image: linear-gradient(90deg, rgba(6, 6, 6, 0.01) 0%, rgba(6, 6, 6, 0.01) 1%,rgba(131, 131, 131, 0.01) 1%, rgba(131, 131, 131, 0.01) 14%,rgba(250, 250, 250, 0.01) 14%, rgba(250, 250, 250, 0.01) 26%,rgba(30, 30, 30, 0.01) 26%, rgba(30, 30, 30, 0.01) 62%,rgba(117, 117, 117, 0.01) 62%, rgba(117, 117, 117, 0.01) 66%,rgba(248, 248, 248, 0.01) 66%, rgba(248, 248, 248, 0.01) 76%,rgba(39, 39, 39, 0.01) 76%, rgba(39, 39, 39, 0.01) 100%),linear-gradient(90deg, rgba(57, 57, 57, 0.06) 0%, rgba(57, 57, 57, 0.06) 4%,rgba(227, 227, 227, 0.06) 4%, rgba(227, 227, 227, 0.06) 26%,rgba(67, 67, 67, 0.06) 26%, rgba(67, 67, 67, 0.06) 27%,rgba(126, 126, 126, 0.06) 27%, rgba(126, 126, 126, 0.06) 39%,rgba(103, 103, 103, 0.06) 39%, rgba(103, 103, 103, 0.06) 72%,rgba(16, 16, 16, 0.06) 72%, rgba(16, 16, 16, 0.06) 76%,rgba(21, 21, 21, 0.06) 76%, rgba(21, 21, 21, 0.06) 88%,rgba(69, 69, 69, 0.06) 88%, rgba(69, 69, 69, 0.06) 100%),linear-gradient(90deg, rgba(156, 156, 156, 0.05) 0%, rgba(156, 156, 156, 0.05) 12%,rgba(54, 54, 54, 0.05) 12%, rgba(54, 54, 54, 0.05) 48%,rgba(169, 169, 169, 0.05) 48%, rgba(169, 169, 169, 0.05) 59%,rgba(104, 104, 104, 0.05) 59%, rgba(104, 104, 104, 0.05) 62%,rgba(165, 165, 165, 0.05) 62%, rgba(165, 165, 165, 0.05) 68%,rgba(124, 124, 124, 0.05) 68%, rgba(124, 124, 124, 0.05) 77%,rgba(189, 189, 189, 0.05) 77%, rgba(189, 189, 189, 0.05) 85%,rgba(173, 173, 173, 0.05) 85%, rgba(173, 173, 173, 0.05) 100%),linear-gradient(90deg, rgba(182, 182, 182, 0.07) 0%, rgba(182, 182, 182, 0.07) 22%,rgba(122, 122, 122, 0.07) 22%, rgba(122, 122, 122, 0.07) 28%,rgba(62, 62, 62, 0.07) 28%, rgba(62, 62, 62, 0.07) 44%,rgba(89, 89, 89, 0.07) 44%, rgba(89, 89, 89, 0.07) 61%,rgba(110, 110, 110, 0.07) 61%, rgba(110, 110, 110, 0.07) 83%,rgba(185, 185, 185, 0.07) 83%, rgba(185, 185, 185, 0.07) 86%,rgba(192, 192, 192, 0.07) 86%, rgba(192, 192, 192, 0.07) 100%),linear-gradient(90deg, rgba(8, 8, 8, 0.06) 0%, rgba(8, 8, 8, 0.06) 54%,rgba(48, 48, 48, 0.06) 54%, rgba(48, 48, 48, 0.06) 57%,rgba(245, 245, 245, 0.06) 57%, rgba(245, 245, 245, 0.06) 86%,rgba(12, 12, 12, 0.06) 86%, rgba(12, 12, 12, 0.06) 94%,rgba(225, 225, 225, 0.06) 94%, rgba(225, 225, 225, 0.06) 100%),linear-gradient(90deg, rgb(53, 169, 225) 0%,rgb(1, 145, 219) 80%,rgb(26, 221, 247) 100%);
   }
   #green,
   :root:has(#green:checked) {
-    --bg-color:darkgreen;
     --text-color: white;
+    font-weight: bold;
+    background-image: linear-gradient(90deg, rgb(173, 173, 173),rgb(129, 129, 129)),linear-gradient(90deg, rgb(91, 131, 23) 0%, rgb(91, 131, 23) 65%,rgb(110, 144, 39) 65%, rgb(110, 144, 39) 67%,rgb(128, 157, 55) 67%, rgb(128, 157, 55) 71%,rgb(147, 169, 70) 71%, rgb(147, 169, 70) 74%,rgb(165, 182, 86) 74%, rgb(165, 182, 86) 93%,rgb(184, 195, 102) 93%, rgb(184, 195, 102) 100%),linear-gradient(67.5deg, rgb(91, 131, 23) 0%, rgb(91, 131, 23) 65%,rgb(110, 144, 39) 65%, rgb(110, 144, 39) 67%,rgb(128, 157, 55) 67%, rgb(128, 157, 55) 71%,rgb(147, 169, 70) 71%, rgb(147, 169, 70) 74%,rgb(165, 182, 86) 74%, rgb(165, 182, 86) 93%,rgb(184, 195, 102) 93%, rgb(184, 195, 102) 100%),linear-gradient(157.5deg, rgb(91, 131, 23) 0%, rgb(91, 131, 23) 65%,rgb(110, 144, 39) 65%, rgb(110, 144, 39) 67%,rgb(128, 157, 55) 67%, rgb(128, 157, 55) 71%,rgb(147, 169, 70) 71%, rgb(147, 169, 70) 74%,rgb(165, 182, 86) 74%, rgb(165, 182, 86) 93%,rgb(184, 195, 102) 93%, rgb(184, 195, 102) 100%); background-blend-mode:overlay, overlay, overlay, normal;
   }
   /*HAS FAZ UMA CONFERÊNCIA PRA VER ONDE ESTA CHECKED E 
   APLICA O TEMA, BEM SEMELHANTE AO IF  */
@@ -96,6 +100,7 @@
   /*VARIAVEIS DO CSS */
   #dark {
     --input-color:black;
+    
   
   }
   
